--- a/charts/inception/configuration/settings.properties
+++ b/charts/inception/configuration/settings.properties
@@ -34,6 +34,16 @@ spring.security.oauth2.client.provider.inception-client.user-name-attribute={{ .
 {{- if .Values.auth.oauth2.autoLogin }}
 security.login.auto-login=inception-client
 {{- end }}
+
+{{- if .Values.auth.oauth2.roleMapping.enabled }}
+security.oauth.roles.enabled=true
+security.oauth.roles.claim={{ .Values.auth.oauth2.roleMapping.claim }}
+security.oauth.roles.admin={{ .Values.auth.oauth2.roleMapping.adminRole }}
+security.oauth.roles.user={{ .Values.auth.oauth2.roleMapping.userRole }}
+security.oauth.roles.project-creator={{ .Values.auth.oauth2.roleMapping.projectCreatorRole }}
+security.oauth.roles.remote={{ .Values.auth.oauth2.roleMapping.remoteRole }}
+{{- end }}}
+
 {{- end }}
 
 {{- if .Values.auth.saml2.enabled }}
