--- a/charts/inception/configuration/settings.properties
+++ b/charts/inception/configuration/settings.properties
@@ -23,7 +23,7 @@ wicket.core.csrf.accepted-origins[2]=http://{{ .Values.config.security.acceptedO
 
 {{- if .Values.auth.oauth2.enabled }}
 spring.security.oauth2.client.registration.inception-client.client-name={{ .Values.auth.oauth2.clientName }}
-spring.security.oauth2.client.registration.inception-client.client-id={{ .Values.auth.oauth2.clientID }}
+spring.security.oauth2.client.registration.inception-client.client-id=${OIDC_CLIENT_ID}
 spring.security.oauth2.client.registration.inception-client.client-secret=${OIDC_CLIENT_SECRET}
 spring.security.oauth2.client.registration.inception-client.scope={{ .Values.auth.oauth2.scope }}
 spring.security.oauth2.client.registration.inception-client.authorization-grant-type={{ .Values.auth.oauth2.authorizationGrantType }}
