--- a/charts/inception/templates/secrets/oidc.yaml
+++ b/charts/inception/templates/secrets/oidc.yaml
@@ -5,5 +5,6 @@ metadata:
 type: Opaque
 apiVersion: v1
 data:
-  clientSecret: {{ required "You must specify an OIDC client secret in the 'auth.oauth2.clientSecret.value' key of your values file if you're not refereing to an existing Secret!" .Values.auth.oauth2.clientSecret.value | b64enc | quote }}
+  clientID: {{ required "You must specify an OIDC client ID in the 'auth.oauth2.clientID.value' key of your values file if you're not refering to an existing Secret!" .Values.auth.oauth2.clientID.value | b64enc | quote }}
+  clientSecret: {{ required "You must specify an OIDC client secret in the 'auth.oauth2.clientSecret.value' key of your values file if you're not refering to an existing Secret!" .Values.auth.oauth2.clientSecret.value | b64enc | quote }}
 {{- end }}
