--- a/charts/inception/templates/deployments/inception.yaml
+++ b/charts/inception/templates/deployments/inception.yaml
@@ -58,7 +58,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: {{ default (include "inception.secret.databaseAuth.name" .) .Values.config.database.auth.password.existingSecret.secretName }}
-                key: {{ default "password" .Values.config.database.auth.password.existingSecret.secretkey }}
+                key: {{ default "password" .Values.config.database.auth.password.existingSecret.secretKey }}
           {{- if .Values.auth.oauth2.enabled }}
           - name: OIDC_CLIENT_ID
             valueFrom:
