--- a/charts/inception/Chart.yaml
+++ b/charts/inception/Chart.yaml
@@ -6,7 +6,7 @@ sources:
   - https://github.com/inception-project/inception
 
 maintainers:
-  - name: Richard Eckart de Castilho
+  - name: reckart
     email: richard.eckart@gmail.com
     url: https://github.com/reckart
 
