--- a/.github/workflows/chart-ci.yml
+++ b/.github/workflows/chart-ci.yml
@@ -48,6 +48,25 @@ jobs:
           if: steps.list-changed.outputs.changed == 'true'
           run: ct install --target-branch ${{ github.event.repository.default_branch }}
 
+  generate-doc:
+    needs: lint-test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v
+      with:
+        fetch-depth: 0
+    
+    - name: Helm-docs
+      uses: losisin/helm-docs-github-action@v1
+      with:
+        chart-search-root: ./chart/inception
+        values-file : ./charts/inception/values.yaml
+        output-file: ./charts/inception/README.md
+        template-files: ./charts/inception/README.md.gotpl
+        sort-order: file
+
+
   release:
     # depending on default permission settings for your org (contents being read-only or read-write for workloads), you will have to add permissions
     # see: https://docs.github.com/en/actions/security-guides/automatic-token-authentication#modifying-the-permissions-for-the-github_token
