--- a/.github/workflows/chart-ci.yml
+++ b/.github/workflows/chart-ci.yml
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v
+      uses: actions/checkout@v3
       with:
         fetch-depth: 0
     
@@ -70,7 +70,7 @@ jobs:
   release:
     # depending on default permission settings for your org (contents being read-only or read-write for workloads), you will have to add permissions
     # see: https://docs.github.com/en/actions/security-guides/automatic-token-authentication#modifying-the-permissions-for-the-github_token
-    needs: lint-test
+    needs: generate-doc
     permissions:
       contents: write
     runs-on: ubuntu-latest
